# InfinitRight

./: .gitignore  CMakeLists.txt  infinit_right.sln
infinit_right/: CMakeLists.txt  infinit_right.vcxproj  infinit_right.vcxproj.filters
infinit_right/src/: infinit_right_app.cpp  infinit_right_app.h  infinit_right_logging.h  infinit_right_uuid.cpp  infinit_right_uuid.h  main.cpp  prefix.h
infinit_right/src/drawing/: _lr_drawing_prefix.h  infinit_right_drawing.cpp  infinit_right_drawing.h
infinit_right/src/object/: _ir_object_prefix.h  infinit_right_object.cpp  infinit_right_object.h
infinit_right/src/properties/: _ir_properties_prefix.h  infinit_right_json_converter.cpp  infinit_right_json_converter.h  infinit_right_property.cpp  infinit_right_property.h
infinit_right/src/undo/: _ir_undo_prefix.h  infinit_right_undo_action.cpp  infinit_right_undo_action.h  infinit_right_undo_manager.cpp  infinit_right_undo_manager.h  infinit_right_undo_value.cpp  infinit_right_undo_value.h  infinit_right_undo_value_change.cpp  infinit_right_undo_value_change.h  infinit_right_undo_value_create.cpp  infinit_right_undo_value_create.h  infinit_right_undo_value_delete.cpp  infinit_right_undo_value_delete.h
infinit_right_app/: binding.gyp  index.js  package-lock.json  package.json
infinit_right_app/core/: module_main.cpp
infinit_right_app/core/objects/: infinit_right_drawing_object.cpp  infinit_right_drawing_object.h
infinit_right_app/rx_react_app/: package-lock.json  package.json
infinit_right_app/rx_react_app/public/: index.html
infinit_right_app/rx_react_app/src/: App.js  callback.js  index.js  server_connection.js
infinit_right_app/rx_react_app/src/components/: SceneTreeComponent.js
infinit_right_sandbox/: CMakeLists.txt  infinit_right_sandbox.vcxproj  infinit_right_sandbox.vcxproj.filters
infinit_right_sandbox/src/: main.cpp
infinit_right_sandbox/src/objects/: TestObject.h
ir_electron_test/: binding.gyp  index.html  index.js  package-lock.json  package.json
ir_electron_test/src/: module_main.cpp
scripts/: build.sh  build_deps.sh  create_binding_gyp.py
